# voice2text_deltabot

./: .gitignore  README.md  pylama.ini  pyproject.toml
.github/workflows/: python-ci.yml
voice2text_deltabot/: __init__.py  __main__.py  const.py  hooks.py  subcommands.py
