[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "voice2text-deltabot"
description = "Delta Chat bot to extract text from voice messages"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["deltachat", "bot"]
authors = [
  {name = "adbenitez", email = "adb@merlinux.eu"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
    "deltabot-cli>=8.0.0,<9.0",
    "faster-whisper",
]

[project.urls]
Homepage = "https://github.com/deltachat-bot/voice2text_deltabot"

[project.optional-dependencies]
dev = [
  "black",
  "mypy",
  "isort",
  "pylint",
  "pylama",
  "pytest",
]

[project.scripts]
voice2text-bot = "voice2text_deltabot:main"

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm
version_file = "voice2text_deltabot/_version.py"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = "True"
